[gd_scene load_steps=6 format=3 uid="uid://dpa80diwk0sru"]

[ext_resource type="Script" path="res://main/main.gd" id="1_i62pv"]
[ext_resource type="PackedScene" uid="uid://cuw3vupmrtaok" path="res://ui/ui.tscn" id="2_ap42d"]
[ext_resource type="AudioStream" uid="uid://b4gvs1ia82ob5" path="res://audio/game_music_1.ogg" id="8_lju5e"]

[sub_resource type="Shader" id="Shader_w0sa4"]
code = "shader_type canvas_item;


uniform int iterations : hint_range(0, 100, 1) = 17;
uniform float formuparam : hint_range(0.0, 100.0, 0.001) = 0.53;


uniform int volsteps : hint_range(0, 100, 1) = 20;
uniform float stepsize : hint_range(0.0, 100.0, 0.001) = 0.1;


uniform float zoom : hint_range(0.0, 100.0, 0.001) = 0.800;
uniform float tile : hint_range(0.0, 100.0, 0.001) = 0.850;
uniform vec3 speed = vec3(0.0, 3, 1);


uniform float brightness : hint_range(0.0, 100.0, 0.0001) = 0.0015;
uniform float darkmatter : hint_range(0.0, 100.0, 0.001) = 0.300;
uniform float distfading : hint_range(0.0, 100.0, 0.001) = 0.730;
uniform float saturation : hint_range(0.0, 100.0, 0.001) = 0.850;
uniform vec4 colorize : source_color = vec4( 0.0, 0.0, 0.0, 1.0 );

uniform vec2 iMouse = vec2(0.0, 0.0);


void fragment()
{
	//get coords and direction
	vec2 uv=FRAGCOORD.xy/(1.0 / SCREEN_PIXEL_SIZE.xy)-.5;
	uv.y*=(1.0 / SCREEN_PIXEL_SIZE.xy).y/(1.0 / SCREEN_PIXEL_SIZE.xy).x;
	vec3 dir=vec3(uv*zoom,1.);
	vec3 time=vec3(speed * TIME * 0.001);//vec3(speed.x * TIME * 00.1, speed.y * TIME * 0.1, speed.z * TIME * 0.1);


	//mouse rotation
	float a1=.5+iMouse.x/(1.0 / SCREEN_PIXEL_SIZE.xy).x*2.;
	float a2=.8+iMouse.y/(1.0 / SCREEN_PIXEL_SIZE.xy).y*2.;
	mat2 rot1=mat2(vec2(cos(a1),sin(a1)),vec2(-sin(a1),cos(a1)));
	mat2 rot2=mat2(vec2(cos(a2),sin(a2)),vec2(-sin(a2),cos(a2)));
	dir.xz*=rot1;
	dir.xy*=rot2;
	vec3 from=vec3(1.,.5,0.5);
	from+=time;
	from.xz*=rot1;
	from.xy*=rot2;
	
	//volumetric rendering
	float s=0.1,fade=1.;
	vec3 v=vec3(0.);
	
	for (int r=0; r<volsteps; r++) {
		vec3 p=from+s*dir*.5;
		p = abs(vec3(tile)-mod(p,vec3(tile*2.))); // tiling fold
		float pa,a=pa=1.0;
		for (int i=0; i<iterations; i++) { 
			p=abs(p)/dot(p,p)-formuparam; // the magic formula
			a+=abs(length(p)-pa); // absolute sum of average change
			pa=length(p);
		}
		float dm=max(0.,darkmatter-a*a*.001); //dark matter
		a*=a*a; // add contrast
		if (r>6) fade*=1.-dm; // dark matter, don't render near
		//v+=vec3(dm,dm*.5,0.);
		v+=fade;
		v+=vec3(s,s*s,s*s*s*s)*a*brightness*fade; // coloring based on distance
		fade*=distfading; // distance fading
		s+=stepsize;
	}
	
	v=mix(vec3(length(v)), v / (1.0 - colorize.rgb),saturation); //color adjust
	COLOR = vec4(v*.01,1.);	
	
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g3g8o"]
shader = SubResource("Shader_w0sa4")
shader_parameter/brightness = 0.0006
shader_parameter/colorize = Color(0, 0, 0, 1)
shader_parameter/darkmatter = 0.774
shader_parameter/distfading = 0.602
shader_parameter/formuparam = 0.48
shader_parameter/iMouse = Vector2(0, 0)
shader_parameter/iterations = 13
shader_parameter/saturation = 0.9
shader_parameter/speed = Vector3(1, 0.5, 1)
shader_parameter/stepsize = 0.1
shader_parameter/tile = 0.839
shader_parameter/volsteps = 6
shader_parameter/zoom = 1.756

[node name="Main" type="Node2D"]
process_mode = 3
script = ExtResource("1_i62pv")
player_safe_zone_scaling = 5.0

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1
visible = false
follow_viewport_enabled = true

[node name="FancyShader" type="ColorRect" parent="BackgroundLayer"]
material = SubResource("ShaderMaterial_g3g8o")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Dimming" type="ColorRect" parent="BackgroundLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.627451)
metadata/_edit_lock_ = true

[node name="UI" parent="." instance=ExtResource("2_ap42d")]
unique_name_in_owner = true

[node name="Asteroids" type="Node2D" parent="."]

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_lju5e")
volume_db = -80.0
bus = &"Music"

[node name="GameResetTimer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="finished" from="MusicPlayer" to="." method="_on_music_player_finished"]
[connection signal="timeout" from="GameResetTimer" to="." method="_on_reset_timeout"]
